// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Settings />  1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-16oka5y"
  >
    <h2
      class="chakra-heading css-bqsusc"
      data-testid="base-container-heading"
    >
      Settings
    </h2>
    <div
      class="css-1b6lda7"
      data-testid="base-container-children"
    >
      <div
        class="css-src872"
      >
        <h2
          class="chakra-heading css-qltjox"
          data-testid="subtitle"
        >
          Choose a settings option
        </h2>
        <div
          class="css-nxcc5s"
        >
          <div
            class="css-180e663"
          >
            <button
              class="css-1wr8k95"
              data-testid="direct-access-stableCoinSettings"
              disabled=""
            >
              <div
                class="css-1i763ui"
              >
                <svg
                  class="chakra-icon css-1f9qa95"
                  data-testid="direct-access-CoinVertical"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 256 256"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="none"
                    height="256"
                    width="256"
                  />
                  <ellipse
                    cx="104"
                    cy="128"
                    fill="none"
                    rx="56"
                    ry="96"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                  />
                  <path
                    d="M104,32h48c30.9,0,56,43,56,96s-25.1,96-56,96H104"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                  />
                  <line
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                    x1="145.7"
                    x2="193.7"
                    y1="64"
                    y2="64"
                  />
                  <line
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                    x1="160"
                    x2="208"
                    y1="128"
                    y2="128"
                  />
                  <line
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                    x1="145.7"
                    x2="193.7"
                    y1="192"
                    y2="192"
                  />
                </svg>
              </div>
              <p
                class="chakra-text css-o5z2l9"
                data-testid="direct-access-Stable Coin"
              >
                Stable Coin
              </p>
            </button>
          </div>
          <div
            class="css-180e663"
          >
            <button
              class="css-1wr8k95"
              data-testid="direct-access-factorySettings"
              disabled=""
            >
              <div
                class="css-1i763ui"
              >
                <svg
                  class="chakra-icon css-1f9qa95"
                  data-testid="direct-access-Factory"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 256 256"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="none"
                    height="256"
                    width="256"
                  />
                  <line
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                    x1="80"
                    x2="108"
                    y1="176"
                    y2="176"
                  />
                  <line
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                    x1="148"
                    x2="176"
                    y1="176"
                    y2="176"
                  />
                  <polyline
                    fill="none"
                    points="216 216 216 136 168 136 104 88 104 136 40 88 40 216"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                  />
                  <line
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                    x1="16"
                    x2="240"
                    y1="216"
                    y2="216"
                  />
                  <path
                    d="M216,136,201,30.9a8,8,0,0,0-7.9-6.9H174.9a8,8,0,0,0-7.9,6.9l-13.5,94.3"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                  />
                </svg>
              </div>
              <p
                class="chakra-text css-o5z2l9"
                data-testid="direct-access-Factory"
              >
                Factory
              </p>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Settings /> aaa 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-16oka5y"
  >
    <h2
      class="chakra-heading css-bqsusc"
      data-testid="base-container-heading"
    >
      Settings
    </h2>
    <div
      class="css-1b6lda7"
      data-testid="base-container-children"
    >
      <div
        class="css-src872"
      >
        <h2
          class="chakra-heading css-qltjox"
          data-testid="subtitle"
        >
          Choose a settings option
        </h2>
        <div
          class="css-nxcc5s"
        >
          <div
            class="css-180e663"
          >
            <button
              class="css-3aphhy"
              data-testid="direct-access-stableCoinSettings"
            >
              <div
                class="css-1i763ui"
              >
                <svg
                  class="chakra-icon css-1f9qa95"
                  data-testid="direct-access-CoinVertical"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 256 256"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="none"
                    height="256"
                    width="256"
                  />
                  <ellipse
                    cx="104"
                    cy="128"
                    fill="none"
                    rx="56"
                    ry="96"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                  />
                  <path
                    d="M104,32h48c30.9,0,56,43,56,96s-25.1,96-56,96H104"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                  />
                  <line
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                    x1="145.7"
                    x2="193.7"
                    y1="64"
                    y2="64"
                  />
                  <line
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                    x1="160"
                    x2="208"
                    y1="128"
                    y2="128"
                  />
                  <line
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                    x1="145.7"
                    x2="193.7"
                    y1="192"
                    y2="192"
                  />
                </svg>
              </div>
              <p
                class="chakra-text css-o5z2l9"
                data-testid="direct-access-Stable Coin"
              >
                Stable Coin
              </p>
            </button>
          </div>
          <div
            class="css-180e663"
          >
            <button
              class="css-3aphhy"
              data-testid="direct-access-factorySettings"
            >
              <div
                class="css-1i763ui"
              >
                <svg
                  class="chakra-icon css-1f9qa95"
                  data-testid="direct-access-Factory"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 256 256"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="none"
                    height="256"
                    width="256"
                  />
                  <line
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                    x1="80"
                    x2="108"
                    y1="176"
                    y2="176"
                  />
                  <line
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                    x1="148"
                    x2="176"
                    y1="176"
                    y2="176"
                  />
                  <polyline
                    fill="none"
                    points="216 216 216 136 168 136 104 88 104 136 40 88 40 216"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                  />
                  <line
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                    x1="16"
                    x2="240"
                    y1="216"
                    y2="216"
                  />
                  <path
                    d="M216,136,201,30.9a8,8,0,0,0-7.9-6.9H174.9a8,8,0,0,0-7.9,6.9l-13.5,94.3"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                  />
                </svg>
              </div>
              <p
                class="chakra-text css-o5z2l9"
                data-testid="direct-access-Factory"
              >
                Factory
              </p>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Settings /> should render correctly 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-16oka5y"
  >
    <h2
      class="chakra-heading css-bqsusc"
      data-testid="base-container-heading"
    >
      Settings
    </h2>
    <div
      class="css-1b6lda7"
      data-testid="base-container-children"
    >
      <div
        class="css-src872"
      >
        <h2
          class="chakra-heading css-qltjox"
          data-testid="subtitle"
        >
          Choose a settings option
        </h2>
        <div
          class="css-nxcc5s"
        >
          <div
            class="css-180e663"
          >
            <button
              class="css-1wr8k95"
              data-testid="direct-access-stableCoinSettings"
              disabled=""
            >
              <div
                class="css-1i763ui"
              >
                <svg
                  class="chakra-icon css-1f9qa95"
                  data-testid="direct-access-CoinVertical"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 256 256"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="none"
                    height="256"
                    width="256"
                  />
                  <ellipse
                    cx="104"
                    cy="128"
                    fill="none"
                    rx="56"
                    ry="96"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                  />
                  <path
                    d="M104,32h48c30.9,0,56,43,56,96s-25.1,96-56,96H104"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                  />
                  <line
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                    x1="145.7"
                    x2="193.7"
                    y1="64"
                    y2="64"
                  />
                  <line
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                    x1="160"
                    x2="208"
                    y1="128"
                    y2="128"
                  />
                  <line
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                    x1="145.7"
                    x2="193.7"
                    y1="192"
                    y2="192"
                  />
                </svg>
              </div>
              <p
                class="chakra-text css-o5z2l9"
                data-testid="direct-access-Stable Coin"
              >
                Stable Coin
              </p>
            </button>
          </div>
          <div
            class="css-180e663"
          >
            <button
              class="css-1wr8k95"
              data-testid="direct-access-factorySettings"
              disabled=""
            >
              <div
                class="css-1i763ui"
              >
                <svg
                  class="chakra-icon css-1f9qa95"
                  data-testid="direct-access-Factory"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 256 256"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="none"
                    height="256"
                    width="256"
                  />
                  <line
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                    x1="80"
                    x2="108"
                    y1="176"
                    y2="176"
                  />
                  <line
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                    x1="148"
                    x2="176"
                    y1="176"
                    y2="176"
                  />
                  <polyline
                    fill="none"
                    points="216 216 216 136 168 136 104 88 104 136 40 88 40 216"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                  />
                  <line
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                    x1="16"
                    x2="240"
                    y1="216"
                    y2="216"
                  />
                  <path
                    d="M216,136,201,30.9a8,8,0,0,0-7.9-6.9H174.9a8,8,0,0,0-7.9,6.9l-13.5,94.3"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="16"
                  />
                </svg>
              </div>
              <p
                class="chakra-text css-o5z2l9"
                data-testid="direct-access-Factory"
              >
                Factory
              </p>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
